src/objects/CRM_WF_Artes__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Propuesta_Unica_Valor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Propuesta única de valor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Rebotados__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Rebotados en un Canal</description>
        <label>Rebotados</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Requisitos__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requisitos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Restriccion_O_Condicionantes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ejemplo: ¿Debe llevar alguna imagen o logotipo? ¿Algo de la oferta que no se deba omitir?</inlineHelpText>
        <label>Restricción o condicionantes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Soft_Bounces__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor porcentaje de Soft Bounces en un Canal</description>
        <label>Soft bounces</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Subproducto__c</fullName>
        <label>Subproducto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRM_WF_Producto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adelanto De Sueldo</fullName>
                    <label>ADELANTO_DE_SUELDO</label>
                </value>
                <value>
                    <fullName>Apartados</fullName>
                    <label>APARTADOS</label>
                </value>
                <value>
                    <fullName>App Bbva Plan</fullName>
                    <label>APP_BBVA_PLAN</label>
                </value>
                <value>
                    <fullName>App Linea Bancomer</fullName>
                    <label>APP_LINEA_BANCOMER</label>
                </value>
                <value>
                    <fullName>App Mi Nomina</fullName>
                    <label>APP_MI_NOMINA</label>
                </value>
                <value>
                    <fullName>App Seguros Recompensa</fullName>
                    <label>APP_SEGUROS_RECOMPENSA</label>
                </value>
                <value>
                    <fullName>Auto Conduce Seguro</fullName>
                    <label>AUTO_CONDUCE_SEGURO</label>
                </value>
                <value>
                    <fullName>Auto Seguro Dinamico</fullName>
                    <label>AUTO_SEGURO_DINAMICO</label>
                </value>
                <value>
                    <fullName>B_DCP</fullName>
                </value>
                <value>
                    <fullName>B_PZO</fullName>
                </value>
                <value>
                    <fullName>Balance Transfer</fullName>
                    <label>BALANCE_TRANSFER</label>
                </value>
                <value>
                    <fullName>Bancomer Trader</fullName>
                    <label>BANCOMER_TRADER</label>
                </value>
                <value>
                    <fullName>Bancomercom</fullName>
                    <label>BANCOMERCOM</label>
                </value>
                <value>
                    <fullName>Bmerpzo</fullName>
                    <isActive>false</isActive>
                    <label>Bmerpzo</label>
                </value>
                <value>
                    <fullName>Boton Naranja</fullName>
                    <label>BOTON_NARANJA</label>
                </value>
                <value>
                    <fullName>Buen Fin</fullName>
                    <label>BUEN_FIN</label>
                </value>
                <value>
                    <fullName>Cedes</fullName>
                    <label>CEDES</label>
                </value>
                <value>
                    <fullName>Cetes</fullName>
                    <label>CETES</label>
                </value>
                <value>
                    <fullName>Cheques Usd</fullName>
                    <label>CHEQUES_USD</label>
                </value>
                <value>
                    <fullName>Cirugia Segura</fullName>
                    <label>CIRUGIA_SEGURA</label>
                </value>
                <value>
                    <fullName>Compras Con Intereses</fullName>
                    <label>COMPRAS_CON_INTERESES</label>
                </value>
                <value>
                    <fullName>Concesionarios Evento O Promocion</fullName>
                    <label>CONCESIONARIOS_EVENTO_O_PROMOCION</label>
                </value>
                <value>
                    <fullName>Contenidos Del Hogar</fullName>
                    <label>CONTENIDOS_DEL_HOGAR</label>
                </value>
                <value>
                    <fullName>Credito Comercio Exterior</fullName>
                    <label>CREDITO_COMERCIO_EXTERIOR</label>
                </value>
                <value>
                    <fullName>Credito Simple</fullName>
                    <label>CREDITO_SIMPLE</label>
                </value>
                <value>
                    <fullName>Cuenta Digital</fullName>
                    <label>CUENTA_DIGITAL</label>
                </value>
                <value>
                    <fullName>Cuenta Invisible</fullName>
                    <label>CUENTA_INVISIBLE</label>
                </value>
                <value>
                    <fullName>CUENTA_MAESTRA</fullName>
                </value>
                <value>
                    <fullName>Dcp-1</fullName>
                    <isActive>false</isActive>
                    <label>Dcp-1</label>
                </value>
                <value>
                    <fullName>Destacame</fullName>
                    <label>DESTACAME</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Suprimidos__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Suprimidos en un Canal</description>
        <label>Suprimidos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Termino_Flujo_Contratacion__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor fecha hora de Terminó flujo de contratación en un Canal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Término flujo de contratación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Texto_Incluyendo_Datos_Variables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ejemplo de cómo debemos colocar en el texto los datos variables</inlineHelpText>
        <label>Ejemplo de texto con datos variables</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_de_Canal__c</fullName>
        <label>Tipo de canal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                    <label>DIGITAL</label>
                </value>
                <value>
                    <fullName>Multicanal</fullName>
                    <label>MULTICANAL</label>
                </value>
                <value>
                    <fullName>Tradicional</fullName>
                    <label>TRADICIONAL</label>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                    <label>NO_APLICA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Titulo_Del_Video__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Título del video</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_Abiertos__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Total abiertos en un Canal</description>
        <label>Total abiertos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_De_Enviados__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Total de enviados en un Canal</description>
        <label>Total de enviados</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Total_De_URL_Secundarias__c</fullName>
        <inlineHelpText>Este es el nùmero total de URLs que tendrá tu versión/arte.</inlineHelpText>
        <label>Total de URLs secundarias</label>
        <summaryForeignKey>CRM_WF_URL_Secundarias__c.CRM_WF_Nombre_Del_Arte__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tracking_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking code</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_URL_O_Landing_Page_Pauta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Lugar donde llegaran los clientes que vean oferta por Pauta Digital</inlineHelpText>
        <label>URL o landing page pauta</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Unidad_de_Medicion__c</fullName>
        <label>Unidad de medición</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segundos</fullName>
                </value>
                <value>
                    <fullName>Minutos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Venta_De_Producto__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para seleccionar un valor de Venta de Producto en un Canal</description>
        <label>Venta de producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Vigencia_Always_On__c</fullName>
        <label>¿Vigencia always on?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Vigencia_De_La_Transmision_Desde__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vigencia de la transmisión: desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Vigencia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vigencia (hasta)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Visitas_Flujo_De_Contratacion__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Visitas flujo de contratación en un Canal</description>
        <label>Visitas flujo de contratación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Visitas_URL__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Visitas URL en un Canal</description>
        <label>Visitas URL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Visitas_Unicas_URL__c</fullName>
        <description>Campo para la aplicación Workflow, se usa para mostrar un valor numérico de Visitas únicas URL en un Canal</description>
        <label>Visitas únicas URL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WR_Buzon_Squad__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Buzón squad</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Comercio_BUC__c</fullName>
        <description>Campo que permite conocer el comercio al que está siendo dirigido el arte</description>
        <formula>MX_WF_Comercio__r.MX_WF_Comercio_BUC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comercio BUC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descuento_aux__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Descuento aux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Agencia_Creativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona una Agencia Creativa a la cuenta</description>
        <label>Agencia creativa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.GBL_WF_Tipo_De_Agencia__c</field>
                <operation>equals</operation>
                <value>Creativa</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Canales</relationshipLabel>
        <relationshipName>Canales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Agencia_De_Medios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la aplicación Workflow, que busca y relaciona una Agencia de Medios a la cuenta</description>
        <label>Agencia de medios</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.GBL_WF_Tipo_De_Agencia__c</field>
                <operation>equals</operation>
                <value>Medios</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Canales (Agencia de Medios)</relationshipLabel>
        <relationshipName>Canales1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Canal__c</fullName>
        <formula>GBL_WF_Tipo_Canal_Canal__r.GBL_WF_Canal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Fecha_de_Envio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de envío</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GBL_WF_HTML__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HTML</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Participa_En_AB_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participa en AB / testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Producto_Suproducto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Busqueda para la apliccación WF, devuelve el Producto y subproducto para el Arte</description>
        <inlineHelpText>Ingresa el valor del Producto que deseas buscar seguido por un guión y el subproducto que aplique. En caso de que no aplique ningún subproducto deberás ingresar NA después del guión.</inlineHelpText>
        <label>Producto - subproducto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GBL_WF_Catalogo_Canal__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producto - Subproducto</value>
            </filterItems>
            <filterItems>
                <field>GBL_WF_Catalogo_Canal__c.MX_WF_Vigente__c</field>
                <operation>equals</operation>
                <value>Sí</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>GBL_WF_Catalogo_Canal__c</referenceTo>
        <relationshipLabel>Canales (Producto - Subproducto)</relationshipLabel>
        <relationshipName>Producto_Subproducto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Producto__c</fullName>
        <description>Campo para la aplicación WF, devuelve el producto elegido</description>
        <formula>GBL_WF_Producto_Suproducto__r.GBL_WF_Producto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Subproducto__c</fullName>
        <description>Campo para la aplicación WF, devuelve el subproducto elegido</description>
        <formula>GBL_WF_Producto_Suproducto__r.GBL_WF_Subproducto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subproducto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tipo_Canal_Canal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Busqueda para la apliccación WF, devuelve el tipo de canal y el canal del Arte</description>
        <inlineHelpText>Ingresa el valor del Tipo de canal que deseas buscar seguido por un guión y el canal que aplique. En caso de que no aplique ningún canal deberás ingresar NA después del guión.</inlineHelpText>
        <label>Tipo de canal - canal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GBL_WF_Catalogo_Canal__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tipo de Canal - Canal</value>
            </filterItems>
            <filterItems>
                <field>GBL_WF_Catalogo_Canal__c.MX_WF_Vigente__c</field>
                <operation>equals</operation>
                <value>Sí</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>GBL_WF_Catalogo_Canal__c</referenceTo>
        <relationshipLabel>Canales</relationshipLabel>
        <relationshipName>Canales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tipo_de_Canal__c</fullName>
        <description>Campo para la aplicación WF, devuelve el Canal elegido</description>
        <formula>GBL_WF_Tipo_Canal_Canal__r.GBL_WF_Tipo_de_Canal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_AB_Testing__c</fullName>
        <label>AB/testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_API_tipo_de_registro__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API tipo de registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Agrupador__c</fullName>
        <description>Campo que concatena el Folio y Nombre de la versión del Arte</description>
        <formula>Name +&quot;/&quot;+ CRM_WF_Nombre_De_La_Version_Arte__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agrupador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_express__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Banca express</description>
        <formula>MX_WF_Comercio__r.MX_WF_Banca_express__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banca express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_patrimonial__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Banca patrimonial</description>
        <formula>MX_WF_Comercio__r.MX_WF_Banca_patrimonial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banca patrimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_personal__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Banca personal</description>
        <formula>MX_WF_Comercio__r.MX_WF_Banca_personal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banca personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_personal_plus__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Banca personal plus</description>
        <formula>MX_WF_Comercio__r.MX_WF_Banca_personal_plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banca personal plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Banca_privada__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Banca privada</description>
        <formula>MX_WF_Comercio__r.MX_WF_Banca_privada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banca privada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bancario_alto__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Bancario alto</description>
        <formula>MX_WF_Comercio__r.MX_WF_Bancario_alto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bancario alto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bancario_bajo__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Bancario bajo</description>
        <formula>MX_WF_Comercio__r.MX_WF_Bancario_bajo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bancario bajo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bancario_estandar__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Bancario estandar</description>
        <formula>MX_WF_Comercio__r.MX_WF_Bancario_estandar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bancario estandar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bines_que_participan__c</fullName>
        <description>Campo que permite informar a Datio los bines que participan en la promoción</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bines que participan</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bonificacion__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el beneficio bonificación</description>
        <formula>MX_WF_Bonificacion_aux__c &gt;=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonificación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bonificacion_aux__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bonificación aux</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Business_Unit__c</fullName>
        <description>Campo que se llenara de acuerdo a la información de una solicitud online, el campo no es accesible para ningún usuario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Envíos multipromoción</relationshipLabel>
        <relationshipName>Canales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Carpeta_Logos_Fotos__c</fullName>
        <description>Campo para la aplicación WF, que permite determinar la ruta en MC en la que se encuentran los insumos para el arte</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Escribe aquí la ruta de la carpeta que contiene tus logos.</inlineHelpText>
        <label>Carpeta con logos y fotos</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Comercio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comercio</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Canales (Comercio)</relationshipLabel>
        <relationshipName>Canales3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Conteo_De_Versiones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo de tipo numérico para aplicación Workflow que permite realizar un conteo de los versionamientos que tuvieron un Arte.</description>
        <label>Conteo de versiones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Crear_Campana_MC__c</fullName>
        <description>Campo de tipo fórmula casilla para la aplicación Workflow, que se actualiza como TRUE si el Estatus del Arte es igual a Subir propuesta para revisión a Proof HQ</description>
        <formula>IF( AND(
   OR( ISPICKVAL ( CRM_WF_Estatus__c , &quot;Generación de Copy&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Desarrollo pieza HTML&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Revisión interna de propuesta&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Aprobación interna de propuesta&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Inicio Proceso Approval&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Subject &amp; Preheader&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Aprobación Subject &amp; Preheader&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Cierre&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Revisión de comentarios&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Realizar ajustes en HTML&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Revisión final de copy&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Revisión del material JM&quot;), 
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Realizar ajustes en HTML y Copy&quot;),
       ISPICKVAL ( CRM_WF_Estatus__c , &quot;Desarrollo pieza HTML y Copy&quot;)),
       RecordType.DeveloperName &lt;&gt; &quot;CRM_WF_Canal_Email_EG&quot;,
       RecordType.DeveloperName &lt;&gt; &quot;Email_Silverpop_con_cambios&quot; ), 
       TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crear campaña en marketing cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Crear_Una_Nueva_Version__c</fullName>
        <label>¿Crear una nueva versión?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Data_Extension_vacia__c</fullName>
        <formula>IF
(
 ISBLANK(CRM_WF_Data_Extension__c),
 0,
 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data extension vacia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Descuento__c</fullName>
        <description>Campo para la aplicación WF, permite informar cuando un arte lleva el beneficio de Descuento</description>
        <formula>MX_WF_Campana__r.MX_WF_Descuento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_Reporte_a_Datio__c</fullName>
        <description>Campo para la aplicación workflow que ayuda a simplificar la consulta del BulkApi para generar el reporte a Datio</description>
        <formula>CRM_WF_Nombre_Del_Brief__r.MX_WF_Fecha_de_reporte_a_Datio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Reporte a Datio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_envio_Solicitud__c</fullName>
        <description>Campo que se llena mediante el flujo de solicitud de envío, el dato sirve para utilizarse en el tracking code de las URL, no es accesible a ningun usuario</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de envío (solicitud)</label>
        <type>Date</type>
    </fields>>
    <fields>
        <fullName>MX_WF_Fecha_fin_de_vigencia_del_arte__c</fullName>
        <description>Campo para la aplicación WF, permite determinar la fecha en la que el arte pierde vigencia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha fin de vigencia del arte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WF_Folio_de_Brief__c</fullName>
        <formula>CRM_WF_Nombre_Del_Brief__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Folio de Brief</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Hipotesis_razon_de_ser_prueba__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hipótesis (razón de ser de la prueba)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Historial_de_cambios__c</fullName>
        <description>Campo de texto largo para la apicación WF, en el que el journey describe los cambios que se deben de hacer al arte</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Historial de cambios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_WF_Legales_richtxt__c</fullName>
        <description>Área de texto enriquecido para la captura de legalos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legales</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MX_WF_MSI__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el beneficio MSI</description>
        <formula>MX_WF_Campana__r.MX_WF_MSI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_MSI_aux__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MSI aux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Maqueta__c</fullName>
        <description>Campo para la aplicación Workflow en el cuál el Journey añade las ruta para la maqueta</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maqueta</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MX_WF_Micronegocio__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Micronegocio</description>
        <formula>MX_WF_Comercio__r.MX_WF_Micronegocio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Micronegocio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Micronegocio_bajo__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Micronegocio bajo</description>
        <formula>MX_WF_Comercio__r.MX_WF_Micronegocio_bajo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Micronegocio bajo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Mono_finanzia__c</fullName>
        <description>Campo para la aplicación WF, permite determinar si aplica para el bel segmento Mono finanzia</description>
        <formula>MX_WF_Comercio__r.MX_WF_Mono_finanzia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mono finanzia</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>